# ascendio

./: .gitignore  README.md
ascendio-app/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ascendio-app/src/: App.css  App.scss  App.tsx  Fonts.scss
ascendio-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ascendio-app/src-tauri/capabilities/: default.json
ascendio-app/src-tauri/src/: errors.rs  functions.rs  lib.rs  main.rs  models.rs
ascendio-app/src-tauri/src/functions/: serial.rs  sim_event.rs
ascendio-app/src-tauri/src/models/: events.rs  hardware.rs
ascendio-app/src-tauri/src/models/app/: config.rs  context.rs
ascendio-app/src-tauri/src/models/commands/: command.rs
ascendio-app/src-tauri/src/models/events/: client_event.rs  event_registry.rs  sim_event.rs
ascendio-app/src-tauri/src/models/hardware/: mcu.rs
ascendio-app/src/components/: Navbar.module.scss  Navbar.tsx  StatusBar.module.scss  StatusBar.tsx  TitleBar.module.scss  TitleBar.tsx  WindowControls.tsx
ascendio-app/src/hooks/: UseTauriEvent.ts
ascendio-app/src/models/: Events.ts
firmware/: arduino.ino
firmware/arduino/: arduino.ino  commands.h  lever.h  pins.h
firmware/ascendio-firmware/: platformio.ini
prototype/: Cargo.toml
prototype/src/: commands.rs  main.rs
schematics/: flightQuadrant.kicad_pcb  flightQuadrant.kicad_prl  flightQuadrant.kicad_pro  flightQuadrant.kicad_sch  flightQuadrant.kicad_sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
schematics/footprints/: Teensy30_31_32_All_Pins.kicad_mod
schematics/symbols/: teensy.lib
(+16 files in other folders)
