[package]
name = "ascendio"
version = "0.1.0"
description = "Ascendio"
authors = ["Girogio Grigolo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ascendio_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-opener = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri = { version = "2", features = [] }
strum = { version = "0.26.3", features = ["derive"] }
simconnect = "0.3.2"
serialport = { version = "4.7.0", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
once_cell = "1.20.2"
log = "0.4.25"
tauri-plugin-serialplugin = "2.8.2"
thiserror = "2.0.11"
